--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@stripe/stripe-js": "^4.7.0",
+    "@toast-ui/react-editor": "^3.2.3",
     "@types/stripe": "^8.0.417",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
